[dependencies]
num-traits = '0.2.6'
rand = '0.6.5'
rayon = '1.0.3'

[dependencies.mpi]
git = 'https://github.com/bsteinb/rsmpi.git'
default-features = false
features = []

[dependencies.mpi-sys]
git='https://github.com/bsteinb/rsmpi.git'


[dependencies.scorus]
path = '../scorus'

[package]
authors = ['Gu Junhua <jhgu@nao.cas.cn>']
edition = '2018'
name = 'mpi_pso'
version = '0.1.0'
