[dependencies]
num-traits = '0.2.8'
rand = '0.7.0-pre.1'
rayon = '1.1.0'

[dependencies.mpi]
default-features = false
features = []
git = 'https://github.com/bsteinb/rsmpi.git'

[dependencies.mpi-sys]
git = 'https://github.com/bsteinb/rsmpi.git'

[dependencies.scorus]
path = '../scorus'

[package]
authors = ['Gu Junhua <jhgu@nao.cas.cn>']
edition = '2018'
name = 'mpi_pso'
version = '0.1.0'
